--- a/packages/insight/src/pages/address/address.html
+++ b/packages/insight/src/pages/address/address.html
@@ -1,17 +1,13 @@
-<head-nav [chainNetwork]="chainNetwork"></head-nav>
+<head-nav></head-nav>
 
 <ion-content>
   <ion-grid fixed>
-
     <div class="page-content">
-
       <loader *ngIf="loading" [type]="'title'"></loader>
-
       <error [message]="errorMessage" *ngIf="!loading && errorMessage "></error>
 
       <div *ngIf="!loading && !errorMessage">
-        <h1 class="content-container--heading">Address <small>{{ getConvertedNumber(address.balance, chainNetwork.chain) | number:'1.0-8' }}
-            {{ currencyProvider.currencySymbol }}</small></h1>
+        <h1 class="content-container--heading">Address <small>{{ address.balance }} {{ currencyProvider.currencySymbol }}</small></h1>
         <p class="ellipsis">{{ address.addrStr }}
           <button [copyToClipboard]="address.addrStr">
             <ion-icon md="md-copy"></ion-icon>
@@ -24,23 +20,39 @@
             <ion-col>
               <ion-list class="list--summary">
                 <ion-item>
-                  Confirmed Balance
+                  Total Received
                   <ion-note item-end>
-                    {{ getConvertedNumber(address.confirmed, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
+                    {{ address.received }} {{ currencyProvider.currencySymbol }}
                   </ion-note>
                 </ion-item>
-                <ion-item *ngIf="address.unconfirmed > 0">
+
+                <ion-item>
+                  Total Sent
+                  <ion-note item-end>
+                    {{ address.sent }} {{ currencyProvider.currencySymbol }}
+                  </ion-note>
+                </ion-item>
+
+                <ion-item>
+                  Final Balance
+                  <ion-note item-end>
+                    {{ address.balance }} {{ currencyProvider.currencySymbol }}
+                  </ion-note>
+                </ion-item>
+
+                <!-- <ion-item *ngIf="address.unconfirmed > 0">
                   Unconfirmed Balance
                   <ion-note item-end>
-                    {{ getConvertedNumber(address.unconfirmed, chainNetwork.chain) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
+                    {{ getConvertedNumber(address.unconfirmed) | number:'1.0-8' }} {{ currencyProvider.currencySymbol }}
                   </ion-note>
-                </ion-item>
-                <ion-item>
+                </ion-item> -->
+
+                <!-- <ion-item>
                   Nro. Transactions
                   <ion-note item-end>
                     {{ nroTransactions || 0 }}
                   </ion-note>
-                </ion-item>
+                </ion-item> -->
               </ion-list>
             </ion-col>
             <ion-col col-auto text-center>
@@ -50,10 +62,9 @@
         </ion-grid>
 
         <h1>Transactions</h1>
-        <coin-list  [addrStr]="address.addrStr" [chainNetwork]="chainNetwork"></coin-list>
+        <coin-list [addrStr]="address.addrStr"></coin-list>
       </div>
-
     </div>
   </ion-grid>
 </ion-content>
-<footer [chainNetwork]="chainNetwork"></footer>
+<footer></footer>
