--- a/packages/insight/src/pages/search/search.html
+++ b/packages/insight/src/pages/search/search.html
@@ -1,4 +1,4 @@
-<head-nav [chainNetwork]="chainNetwork"></head-nav>
+<head-nav></head-nav>
 
 <ion-content class="content-container">
     <ion-grid class="page-content-grid">
@@ -7,8 +7,8 @@
                 <h2 class="content-container--heading">Blocks:</h2>
             </ion-col>
             <ion-col col-md-6 col-12 class="page-content" *ngFor="let block of matches.blocks" (click)="goToBlock(block)">
-                <div ion-item no-lines>
-                    <ion-avatar item-start>
+                <!-- <div ion-item no-lines>
+                     <ion-avatar item-start>
                         <img *ngIf="block.network === 'mainnet'" src="assets/img/currency_logos/{{ block.chain.toLowerCase() }}.svg" class="logo" />
                         <img *ngIf="block.network !== 'mainnet' && block.chain==='BTC'" src="assets/img/btcicon-testnet.svg" class="logo" />
                         <img *ngIf="block.network !== 'mainnet' && block.chain==='BCH'" src="assets/img/bchicon-testnet.svg" class="logo" />
@@ -19,7 +19,7 @@
                             #{{ block.height }}
                         </span>
                     </ion-label>
-                </div>
+                </div> -->
                 <div ion-item no-lines>
                     <div ion-text color="primary">
                         Block Hash {{ block.hash }}
@@ -33,7 +33,7 @@
                 <h2 class="content-container--heading">Transactions:</h2>
             </ion-col>
             <ion-col col-md-6 col-12 class="page-content" *ngFor="let tx of matches.txs" (click)="goToTx(tx)">
-                <div ion-item no-lines>
+                <!-- <div ion-item no-lines>
                     <ion-avatar item-start>
                         <img *ngIf="tx.network === 'mainnet'" src="assets/img/currency_logos/{{ tx.chain.toLowerCase() }}.svg" class="logo" />
                         <img *ngIf="tx.network !== 'mainnet' && tx.chain==='BTC'" src="assets/img/btcicon-testnet.svg" class="logo" />
@@ -43,7 +43,7 @@
                     <ion-label color="dark" item-end>
                         {{ tx.chain }} <small class="pill"> {{ tx.network }}</small>
                     </ion-label>
-                </div>
+                </div> -->
                 <div ion-item no-lines>
                     <div ion-text color="primary">
                         {{ tx.txid }}
@@ -57,17 +57,17 @@
                 <h2 class="content-container--heading">Addresses:</h2>
             </ion-col>
             <ion-col col-md-6 col-12 class="page-content" *ngFor="let addr of matches.addresses" (click)="goToAddress(addr)">
-                <div ion-item no-lines>
+                 <!-- <div ion-item no-lines>
                     <ion-avatar item-start>
                         <img *ngIf="addr.network === 'mainnet'" src="assets/img/currency_logos/{{ addr.chain.toLowerCase() }}.svg" class="logo" />
                         <img *ngIf="addr.network !== 'mainnet' && addr.chain==='BTC'" src="assets/img/btcicon-testnet.svg" class="logo" />
                         <img *ngIf="addr.network !== 'mainnet' && addr.chain==='BCH'" src="assets/img/bchicon-testnet.svg" class="logo" />
                         <img [ngClass]="{'secondary': addr.network ==='testnet'}" *ngIf="addr.network !== 'mainnet' && addr.chain==='ETH'" src="assets/img/currency_logos/eth.svg" class="logo" />
                     </ion-avatar>
-                    <ion-label color="dark" item-end>
+                     <ion-label color="dark" item-end>
                         {{ addr.chain }} <small class="pill"> {{ addr.network }}</small>
                     </ion-label>
-                </div>
+                </div> -->
                 <div ion-item no-lines>
                     <div ion-text color="primary">
                         {{ addr.address }}
@@ -77,4 +77,4 @@
         </ion-row>
     </ion-grid>
 </ion-content>
-<footer [chainNetwork]="chainNetwork"></footer>
+<footer></footer>
