--- a/src/pages/address/address.html
+++ b/src/pages/address/address.html
@@ -84,7 +84,7 @@
                 <error class="error-message" message="{{errorMessage}}" *ngIf="errorMessage"></error>
                 <div class="error-warning" *ngIf="errorMessage">
                     <ul>
-                        <li>1) You are using Coinomi. I know!</li>
+                        <li>1) If you are using Coinomi. Double check if it is not a new address.</li>
                         <li>2) Coinomi creates 1 NEW address after each transaction</li>
                         <li>3) That is not your REWARDs address!</li>
                         <li>4) Go to receive tab and click on Previous addresses</li>
