--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -6,7 +6,8 @@
             <ion-col col-12>
                 <h2 class="content-container--heading">Blocks:</h2>
             </ion-col>
-            <ion-col col-md-6 col-12 class="page-content" *ngFor="let block of matches.blocks" (click)="goToBlock(block)">
+            <ion-col col-md-6 col-12 class="page-content" *ngFor="let block of matches.blocks"
+                (click)="goToBlock(block)">
                 <!-- <div ion-item no-lines>
                      <ion-avatar item-start>
                         <img *ngIf="block.network === 'mainnet'" src="assets/img/currency_logos/{{ block.chain.toLowerCase() }}.svg" class="logo" />
@@ -56,8 +57,9 @@
             <ion-col col-12>
                 <h2 class="content-container--heading">Addresses:</h2>
             </ion-col>
-            <ion-col col-md-6 col-12 class="page-content" *ngFor="let addr of matches.addresses" (click)="goToAddress(addr)">
-                 <!-- <div ion-item no-lines>
+            <ion-col col-md-6 col-12 class="page-content" *ngFor="let addr of matches.addresses"
+                (click)="goToAddress(addr)">
+                <!-- <div ion-item no-lines>
                     <ion-avatar item-start>
                         <img *ngIf="addr.network === 'mainnet'" src="assets/img/currency_logos/{{ addr.chain.toLowerCase() }}.svg" class="logo" />
                         <img *ngIf="addr.network !== 'mainnet' && addr.chain==='BTC'" src="assets/img/btcicon-testnet.svg" class="logo" />
