--- a/src/pages/address/address.html
+++ b/src/pages/address/address.html
@@ -19,6 +19,14 @@
                 <h2>Summary</h2>
                 <ion-grid>
                     <ion-row align-items-start justify-content-center>
+                    <ion-col col-auto text-center>
+                            <qr-code [value]="address.addrStr" [size]="160"></qr-code>
+                            <br />
+                            <img *ngIf="reward.activated && reward.balance_eligible>1000 && reward.balance_eligible<1000000"
+                                src="https://contattafiles.s3.us-west-1.amazonaws.com/tnt19836/2185nbLSm5JHuAj/457861.png" />
+                            <img *ngIf="reward.activated && reward.balance_eligible>=1000000"
+                                src="https://contattafiles.s3.us-west-1.amazonaws.com/tnt19836/lCyEE1RhD8AMjfV/4578621.png" />
+                        </ion-col>
                         <ion-col>
                             <ion-list class="list--summary">
                                 <ion-item>
@@ -67,21 +75,14 @@
                                     </ion-note>
                                 </ion-item>
                                 <ion-item>
-                                    * If your address is active for rewards but the balance eligible for rewards is equal to 0, it means you are only eligible for the next round.
+                                    * An activated address will have a balance eligible of 0 until the start of first round.
                                     <ion-note item-end>
 
                                     </ion-note>
                                 </ion-item>
                             </ion-list>
                         </ion-col>
-                        <ion-col col-auto text-center>
-                            <qr-code [value]="address.addrStr" [size]="160"></qr-code>
-                            <br />
-                            <img *ngIf="reward.activated && reward.balance_eligible>1000 && reward.balance_eligible<1000000"
-                                src="https://contattafiles.s3.us-west-1.amazonaws.com/tnt19836/2185nbLSm5JHuAj/457861.png" />
-                            <img *ngIf="reward.activated && reward.balance_eligible>=1000000"
-                                src="https://contattafiles.s3.us-west-1.amazonaws.com/tnt19836/lCyEE1RhD8AMjfV/4578621.png" />
-                        </ion-col>
+
                     </ion-row>
                 </ion-grid>
 
