Updates and Address Locked Balance Fields

--- a/src/pages/address/address.html
+++ b/src/pages/address/address.html
@@ -55,6 +55,42 @@
                                     </ion-note>
                                 </ion-item>
                                 <ion-item>
+                                    Locked Balance 1+ - 2 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 1+ - 2 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    Locked Balance 2+ - 5 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 2+ - 5 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    Locked Balance 5+ - 10 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 5+ - 10 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    Locked Balance 15+ - 100 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 15+ - 100 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    Locked Balance 100+ - 199 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 100+ - 199 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    Locked Balance 199+ years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 199+ years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
                                     Free Balance
                                     <ion-note item-end>
                                         {{ address.balance.unlocked }} {{ currencyProvider.currencySymbol }}
