--- a/src/pages/address/address.html
+++ b/src/pages/address/address.html
@@ -55,6 +55,12 @@
                                     </ion-note>
                                 </ion-item>
                                 <ion-item>
+                                    Locked Balance 0 - 1 years
+                                    <ion-note item-end>
+                                        {{ address.balance["locked 0 - 1 years"] }} {{ currencyProvider.currencySymbol }}
+                                    </ion-note>
+                                </ion-item>
+                                <ion-item>
                                     Locked Balance 1+ - 2 years
                                     <ion-note item-end>
                                         {{ address.balance["locked 1+ - 2 years"] }} {{ currencyProvider.currencySymbol }}
